More compile time optimisation

--- a/.github/workflows/legolas.yml
+++ b/.github/workflows/legolas.yml
@@ -101,7 +101,7 @@ jobs:
         if [[ "${{ matrix.coverage }}" ]]; then
           cmake -DCoverage=ON ..
         else
-          cmake ..
+          cmake -DDebug=ON ..
         fi
         make -j 2
 
