Add inverse iteration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,7 @@ set (sources
         solvers/arnoldi/smod_arpack_main.f08
         solvers/arnoldi/smod_arpack_general.f08
         solvers/arnoldi/smod_arpack_shift_invert.f08
+        solvers/smod_inverse_iteration.f08
         eigenfunctions/mod_eigenfunctions.f08
         eigenfunctions/smod_ef_operations.f08
         eigenfunctions/smod_base_efs.f08
