[WIP] refactor and rework arnoldi routines for new datastructure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,10 +80,11 @@ set (sources
         matrices/smod_viscosity_matrix.f08
         matrices/smod_hall_matrix.f08
         solvers/mod_solvers.f08
-        # solvers/mod_arpack_type.f08
         solvers/smod_qr_invert.f08
         solvers/smod_qz_direct.f08
-        # solvers/smod_arnoldi.f08
+        solvers/arnoldi/mod_arpack_type.f08
+        solvers/arnoldi/smod_arpack_main.f08
+        solvers/arnoldi/smod_arpack_general.f08
         eigenfunctions/mod_eigenfunctions.f08
         eigenfunctions/smod_ef_operations.f08
         eigenfunctions/smod_base_efs.f08
