module to solve linear complex banded systems + tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,6 +80,7 @@ set (sources
         matrices/smod_conduction_matrix.f08
         matrices/smod_viscosity_matrix.f08
         matrices/smod_hall_matrix.f08
+        solvers/mod_linear_systems.f08
         solvers/mod_solvers.f08
         solvers/smod_qr_invert.f08
         solvers/smod_qz_direct.f08
