--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -61,6 +61,7 @@ set( test_sources
         mod_test_matrix_structure_complex.pf
         mod_test_matrix_maths.pf
         mod_test_transform_matrix.pf
+        mod_test_linear_systems.pf
         mod_test_indices.pf
         mod_test_grid.pf
         mod_test_input.pf
