--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -60,6 +60,7 @@ set( test_sources
         mod_test_matrix_structure.pf
         mod_test_matrix_maths.pf
         mod_test_transform_matrix.pf
+        mod_test_matrices_big.pf
         mod_test_solvers_linear_systems.pf
         mod_test_solvers_lapack.pf
         mod_test_solvers_arpack_type.pf
