temporarily fix ford version because docs are failing again...

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         # Fix version for now, 3.4 throws an error (see #101)
         pip install markdown==3.3.7
-        pip install ford graphviz
+        pip install ford==6.1.13 graphviz
         sudo apt-get install graphviz
         pip install -U sphinx
         pip install numpydoc sphinx-rtd-theme lazy-object-proxy==1.4 sphinx-autoapi
