--- a/.github/workflows/pylbo.yml
+++ b/.github/workflows/pylbo.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov
+        sudo apt-get install ffmpeg
         cd post_processing
         python setup.py develop
 
