fixed residuals compilation error

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set (sources
         matrices/datastructure/mod_matrix_row.f08
         matrices/datastructure/mod_matrix_structure.f08
         matrices/datastructure/mod_banded_matrix.f08
+        matrices/datastructure/mod_bandeD_operations.f08
         matrices/datastructure/smod_matrix_maths.f08
         matrices/datastructure/mod_transform_matrix.f08
         mod_units.f08
