--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -57,6 +57,7 @@ set( test_sources
         mod_test_variables.pf
         mod_test_logging.pf
         mod_test_banded_matrix.pf
+        mod_test_banded_matrix_hermitian.pf
         mod_test_matrix_structure.pf
         mod_test_transform_matrix.pf
         mod_test_matrices_big.pf
