--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set (sources
         settings/mod_dims.f08
         settings/mod_io_settings.f08
         settings/mod_solver_settings.f08
+        settings/mod_physics_settings.f08
         mod_physical_constants.f08
         utils/mod_get_indices.f08
         matrices/datastructure/mod_matrix_node.f08
