refactored grid settings globals to dedicated type

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set (sources
         settings/mod_io_settings.f08
         settings/mod_solver_settings.f08
         settings/mod_physics_settings.f08
+        settings/mod_grid_settings.f08
         mod_physical_constants.f08
         utils/mod_get_indices.f08
         matrices/datastructure/mod_matrix_node.f08
