--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set (sources
         settings/mod_solver_settings.f08
         settings/mod_physics_settings.f08
         settings/mod_grid_settings.f08
+        settings/mod_equilibrium_settings.f08
         mod_physical_constants.f08
         utils/mod_get_indices.f08
         matrices/datastructure/mod_matrix_node.f08
