refactored gravity settings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ set (sources
         dataIO/mod_console.f08
         settings/physics/mod_flow_settings.f08
         settings/physics/mod_cooling_settings.f08
+        settings/physics/mod_gravity_settings.f08
         settings/mod_settings.f08
         settings/mod_dims.f08
         settings/mod_io_settings.f08
