refactored conduction settings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set (sources
         settings/physics/mod_gravity_settings.f08
         settings/physics/mod_resistivity_settings.f08
         settings/physics/mod_viscosity_settings.f08
+        settings/physics/mod_conduction_settings.f08
         settings/mod_settings.f08
         settings/mod_dims.f08
         settings/mod_io_settings.f08
