refactored units to dedicated type

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set (sources
         settings/mod_physics_settings.f08
         settings/mod_grid_settings.f08
         settings/mod_equilibrium_settings.f08
+        settings/mod_units.f08
         mod_physical_constants.f08
         utils/mod_get_indices.f08
         matrices/datastructure/mod_matrix_node.f08
@@ -29,7 +30,6 @@ set (sources
         matrices/datastructure/mod_banded_matrix_hermitian.f08
         matrices/datastructure/mod_banded_operations.f08
         matrices/datastructure/mod_transform_matrix.f08
-        mod_units.f08
         mod_grid.f08
         mod_types.f08
         mod_check_values.f08
