--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -80,7 +80,7 @@ set( test_sources
         mod_test_conduction.pf
         mod_test_boundaries.pf
         mod_test_splines.pf
-        mod_test_subblock.pf
+        mod_test_quadblock.pf
         mod_test_matrix_operators.pf
         mod_test_interpolation.pf
         mod_test_integration.pf
