--- a/.github/workflows/legolas.yml
+++ b/.github/workflows/legolas.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt update
+        sudo apt-get update
         sudo apt-get install libblas-dev
         sudo apt-get install liblapack-dev
         sudo apt-get install lcov
