--- a/.github/workflows/pylbo.yml
+++ b/.github/workflows/pylbo.yml
@@ -54,13 +54,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov
+        sudo apt-get update
         sudo apt-get install ffmpeg
         cd post_processing
         python setup.py develop
 
     - name: Install Legolas dependencies
       run: |
-        sudo apt update
         sudo apt-get install libblas-dev
         sudo apt-get install liblapack-dev
         sudo apt-get install lcov
