dedicated background type + density attribute

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,9 @@ set (sources
         settings/mod_units.f08
         mod_physical_constants.f08
         utils/mod_get_indices.f08
+        background/mod_bg_profiles.f08
+        background/mod_background.f08
+        background/fields/mod_bg_density.f08
         matrices/datastructure/mod_matrix_node.f08
         matrices/datastructure/mod_matrix_row.f08
         matrices/datastructure/mod_matrix_structure.f08
