--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,12 @@ set (sources
         mod_interpolation.f08
         mod_integration.f08
         dataIO/mod_input.f08
+        physics/cooling_curves/mod_data_dalgarno.f08
+        physics/cooling_curves/mod_data_jccorona.f08
+        physics/cooling_curves/mod_data_mlsolar.f08
+        physics/cooling_curves/mod_data_rosner.f08
+        physics/cooling_curves/mod_data_spex.f08
+        physics/cooling_curves/mod_data_spex_enh.f08
         physics/mod_physics_utils.f08
         physics/mod_physics.f08
         physics/mod_gravity.f08
