--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -87,6 +87,7 @@ set( test_sources
         mod_test_cooling.pf
         mod_test_cooling_tables.pf
         mod_test_heating.pf
+        mod_test_heatloss.pf
         mod_test_resistivity.pf
         mod_test_conduction.pf
         mod_test_boundaries.pf
