pylbo: additional continua tests

--- a/tests/pylbo_tests/.coveragerc
+++ b/tests/pylbo_tests/.coveragerc
@@ -23,3 +23,5 @@ exclude_lines =
     def show
     log_deprecation_warning
     raise NotImplementedError
+    class LegolasException
+    if TYPE_CHECKING:
