--- a/tests/pylbo_tests/.coveragerc
+++ b/tests/pylbo_tests/.coveragerc
@@ -7,7 +7,6 @@ omit =
     *testing.py
     *__init__.py*
     *debug.py*
-    pylbo/visualisation/utils.py
 
 [report]
 exclude_lines =
@@ -25,3 +24,5 @@ exclude_lines =
     raise NotImplementedError
     class LegolasException
     if TYPE_CHECKING:
+    def _mark_points_without_data_written
+    def _print_nzeroes
