--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -91,6 +91,7 @@ set( test_sources
         mod_test_resistivity.pf
         mod_test_conduction.pf
         mod_test_boundaries.pf
+        mod_test_statevector.pf
         mod_test_splines.pf
         mod_test_quadblock.pf
         mod_test_interpolation.pf
